Implemented JWT Token Configuration, Generation and Validation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 winston.key=90m4RA8coqbpuF7jTCgPd1WIChlRUFqWhUBO5OIhca276789
+
+jwt.token.expiration = 86400000
