--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AcademiX
 spring.datasource.url=jdbc:mysql://localhost:3306/academix
 spring.datasource.username=root
-spring.datasource.password=Teracraft1!
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
