Set Up Back-End API to Azure Blob Storage. Implemented Multiple File Upload.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+jwt.token.expiration = 86400000
+
 winston.key=90m4RA8coqbpuF7jTCgPd1WIChlRUFqWhUBO5OIhca276789
 
-jwt.token.expiration = 86400000
+spring.cloud.azure.storage.blob.container-name=documents
+spring.cloud.azure.storage.blob.endpoint=https://academixstorage.blob.core.windows.net/documents?sp=racwdli&st=2024-03-15T08:42:41Z&se=2024-03-28T16:42:41Z&sv=2022-11-02&sr=c&sig=SjrWZeOFkC8SFAhurpL%2Bp5e%2Fz7jbf%2F5sclEPxzk30RY%3D
