--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: Run tests with Maven
+      - name: Run and test with Maven
         run: |
           chmod +x ./mvnw
           ./mvnw clean test package
