--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: academix
-          image: byab5/ht2024-api_service:0.2.0-SNAPSHOT
+          image: byab5/ht2024-api_service:0.3.0-SNAPSHOT
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
 ---
@@ -32,3 +33,39 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: frontend-deployment
+  labels:
+    app: frontend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: frontend
+  template:
+    metadata:
+      labels:
+        app: frontend
+    spec:
+      containers:
+        - name: frontend
+          image: byab5/ht2024-academixfe:0.6.0-SNAPSHOT
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: frontend
+  ports:
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
